testsuite/tests/ghc-regress/arrows/should_fail/arrowfail002.hs
{-# OPTIONS -farrows #-}

module ShouldFail where

g :: Int -> Int
g = proc x -> f x -< x+1
  where f = (*)
